# emojic

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
emojic-gen/: Cargo.toml  README.md
emojic-gen/src/: emoji.rs  gemoji.rs  main.rs  strutil.rs
emojic-gen/src/emoji/: people.rs
emojic-gen/src/emoji/people/: groups.rs  parsing.rs  qualifier.rs
emojic-gen/src/templates/: alias.rs.tpl  constants.rs.tpl
emojic-gen/templates/: alias.tera  alias.tpl  flat.tera  grouped.tera  matching.tpl  regex.tera
examples/: aliases.rs  attributes.rs  family.rs  lists.rs  parse_text.rs  toning.rs
src/: alias.rs  constants.rs  emojis.rs  flat.rs  grouped.rs  lib.rs  matching.rs  parser.rs  regex.rs  text.rs
src/emojis/: attributes.rs
