[package]
name = "emojic"
version = "0.3.0"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>", "Cryptjar <cryptjar@junk.studio>"]
edition = "2018"
description = "Emoji constants"
repository = "https://github.com/orhanbalci/emojic.git"
homepage = "https://github.com/orhanbalci"
keywords = ["emoji","unicode"]
license = "MIT"
readme = "README.md"
categories = ["text-processing"]

[[example]]
name = "aliases"
required-features = ["alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = ["hashbrown"]

[dependencies]
lazy_static = "1.4.0"
hashbrown = { version = "0.11", optional = true }


