[package]
name = "emojic"
version = "0.3.1-alpha.0"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>", "Cryptjar <cryptjar@junk.studio>"]
edition = "2018"
description = "Emoji constants"
repository = "https://github.com/orhanbalci/emojic.git"
homepage = "https://github.com/orhanbalci"
keywords = ["emoji","unicode"]
license = "MIT"
readme = "README.md"
categories = ["text-processing"]

[[example]]
name = "aliases"
required-features = ["alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]   # default features are automatically enables (if not opt-out)
alloc = ["hashbrown"] # requires global allocator, enables various functions such as parse_alias
doc_cfg = []          # requires nightly compiler, only intended for docs.rs builds (enables usage of doc_cfg)

[dependencies]
lazy_static = "1.4.0"

[dependencies.hashbrown]
version = "0.11"
optional = true


[package.metadata.docs.rs]
all-features = true # enable all features when building dos on docs.rs

