[package]
name = "emojic"
version = "0.4.1-alpha.0"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>", "Cryptjar <cryptjar@junk.studio>"]
edition = "2018"
description = "Emoji constants"
repository = "https://github.com/orhanbalci/emojic.git"
homepage = "https://github.com/orhanbalci"
keywords = ["emoji","unicode"]
license = "MIT"
readme = "README.md"
categories = ["text-processing"]

[[example]]
name = "aliases"
required-features = ["alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]   # default features are automatically enables (if not opt-out)
alloc = [             # requires global allocator, enables various functions such as parse_alias
    "hashbrown",
    "lazy_static"
]
doc_cfg = []          # requires nightly compiler, only intended for docs.rs builds (enables usage of doc_cfg)

[dependencies]
cfg-if = "1.0"

[dependencies.lazy_static]
version = "1.4.0"
optional = true
# The following feature on `lazy_static` would remove the transitive dependency of lazy_static on
# std, which is necessary if targetting a platform without it. However, since the current version
# of Cargo (1.51.0) unifies features acros crates, requiring that feature here, would make
# lazy_static globally use spinloks instead of mutices. So, it seems more reasonable that a final
# user (binary crate) adds this feature if they want `alloc` but not `std`.
# Also see: https://github.com/rust-lang-nursery/lazy-static.rs/issues/150
#features = ["spin_no_std"] # Would remove std from lazy_static, but it has side-effects

[dependencies.hashbrown]
version = "0.11"
optional = true


[package.metadata.docs.rs]
all-features = true # enable all features when building dos on docs.rs

